[options]
install_requires = attrs==21.2.0
packages = find:

[metadata]
name = py_factor_graph
version = 0.1.0
description = A factor graph object with parsing and save functionality for SLAM problems
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/PyFactorGraph

[options.packages.find]
exclude = examples*
