[options]
# install_requires reads from requirements.txt
install_requires=
    attrs
    numpy
    scipy
    evo
    PyQt5
    coloredlogs
    tqdm

packages = find:

[metadata]
name = py_factor_graph
version = 0.1.0
description = A factor graph object with parsing and save functionality for SLAM problems
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/PyFactorGraph
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
py_factor_graph = py.typed
